Modify function encapsulation info stock chart

--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     width: 52px;
     height: 36px;
-    cursor: default;
+    cursor: pointer;
 
     -webkit-user-select: none;
             user-select: none;
